--- a/assets/styles/components/careers/_impactful-work.scss
+++ b/assets/styles/components/careers/_impactful-work.scss
@@ -36,3 +36,9 @@
   text-align: center;
   margin: 30px 0;
 }
+
+@media screen and (max-width: 1024px) {
+  .gold-badge-iw {
+    margin-left: 0;
+  }
+}
