--- a/assets/styles/layout/_landing.scss
+++ b/assets/styles/layout/_landing.scss
@@ -66,10 +66,14 @@
         .other-countries {
           display: none;
           position: absolute;
-          padding-top: 8px;
+          padding-top: 3px;
           opacity: 0.7;
           // bottom: -120%;
           z-index: 10;
+
+          img {
+            margin-top: 5px;
+          }
         }
       }
 
